# Rocket

contrib/codegen/: Cargo.toml
contrib/codegen/tests/ui-fail/: database-types.stderr
contrib/db_pools/lib/: Cargo.toml
contrib/db_pools/lib/src/: pool.rs
contrib/lib/: Cargo.toml
contrib/lib/src/: lib.rs
contrib/lib/src/templates/: mod.rs
contrib/sync_db_pools/lib/: Cargo.toml
core/codegen/: Cargo.toml
core/codegen/src/: lib.rs
core/http/: Cargo.toml
core/lib/: Cargo.toml
core/lib/src/: lib.rs
examples/databases/: Cargo.toml  Rocket.toml
examples/databases/src/: main.rs  tests.rs
